Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -1,22 +1,27 @@
-% Placeholder bibliography to unblock compilation.
-% Replace entries below with real metadata as you finalize sources.
-
 @article{ALIMONTI2000123,
-  author       = {Placeholder, A. and Placeholder, B.},
-  title        = {Approximation bounds for minimum dominating set},
-  journaltitle = {Placeholder Journal},
-  date         = {2000}
+  author       = {Alimonti, Paola and Kann, Viggo},
+  title        = {Some APX-completeness results for cubic graphs},
+  journaltitle = {Theoretical Computer Science},
+  year         = {2000},
+  volume       = {237},
+  number       = {1--2},
+  pages        = {123--134},
+  doi          = {10.1016/S0304-3975(99)00426-0}
 }
 
 @article{chlebik2008,
-  author       = {Placeholder, A. and Placeholder, B.},
-  title        = {Hardness of approximation of dominating set on bounded-degree graphs},
-  journaltitle = {Placeholder Journal},
-  date         = {2008}
+  author       = {Chleb{\'\i}k, Miroslav and Chleb{\'\i}kov{\'a}, Janka},
+  title        = {The approximation hardness of dominating set problems in bounded degree graphs},
+  journaltitle = {Information and Computation},
+  year         = {2008},
+  volume       = {206},
+  number       = {11},
+  pages        = {1264--1275},
+  doi          = {10.1016/j.ic.2008.02.012}
 }
 
-@article{Chambers2009Extremal,
-  author       = {Chambers, E. W. and Kinnersley, W. B. and Prince, N. and West, D. B.},
+@article{chambers2009,
+  author       = {Chambers, Erin W. and Kinnersley, Bill and Prince, Noah and West, Douglas B.},
   title        = {Extremal problems for Roman domination},
   journaltitle = {SIAM Journal on Discrete Mathematics},
   year         = {2009},
@@ -27,18 +32,22 @@
 }
 
 @article{POUREIDI2023106363,
-  author       = {Placeholder, A. and Placeholder, B.},
-  title        = {Approximation results related to domination variants},
-  journaltitle = {Placeholder Journal},
-  date         = {2023}
+  author       = {Poureidi, Abolfazl and Fathali, Jafar},
+  title        = {Algorithmic results in Roman dominating functions on graphs},
+  journaltitle = {Information Processing Letters},
+  year         = {2023},
+  volume       = {182},
+  pages        = {106363},
+  doi          = {10.1016/j.ipl.2023.106363}
 }
 
 @misc{Kuhn2012NetworkAlgorithms,
-  author       = {Kuhn, F.},
-  title        = {Network Algorithms Lecture Notes},
-  date         = {2012},
+  author       = {Kuhn, Fabian},
+  title        = {Network Algorithms (Graduate Course) -- Lecture Notes},
   howpublished = {Course notes},
-  url          = {https://example.invalid/kuhn-notes}
+  year         = {2012},
+  note         = {Graduate course at the University of Freiburg, Summer Term 2012},
+  url          = {https://algo.inf.uni-freiburg.de/teaching/ss12/network-algorithms/}
 }
 
 @book{haynes1998domination,
@@ -48,22 +57,31 @@
   year         = {1998}
 }
 
-@article{BermanFujitoThreeDegree,
-  author       = {Berman, P. and Fujito, T.},
-  title        = {Approximation algorithms for dominating set},
-  journaltitle = {Placeholder Journal},
-  date         = {1995}
+@inproceedings{BermanFujitoThreeDegree,
+  author       = {Berman, Piotr and Fujito, Toshihiro},
+  title        = {On the Approximation Properties of the Independent Set Problem in Degree 3 Graphs},
+  booktitle    = {Algorithms and Data Structures},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {955},
+  publisher    = {Springer},
+  year         = {1995},
+  pages        = {449--460},
+  isbn         = {978-3-540-60165-6}
 }
 
 @article{Favaron2009,
-  author       = {Favaron, O. and others},
-  title        = {Results on Roman domination},
-  journaltitle = {Placeholder Journal},
-  date         = {2009}
+  author       = {Favaron, Odile and Karami, Hosein and Khoeilar, Reza and Sheikholeslami, Seyed Mahmoud},
+  title        = {On the Roman domination number of a graph},
+  journaltitle = {Discrete Mathematics},
+  year         = {2009},
+  volume       = {309},
+  number       = {10},
+  pages        = {3447--3451},
+  doi          = {10.1016/j.disc.2008.09.043}
 }
 
 @article{Cockayne2004,
-  author       = {Cockayne, E. J. and Dreyer Jr., P. A. and Hedetniemi, S. M. and Hedetniemi, S. T.},
+  author       = {Cockayne, Ernie J. and Dreyer, Paul A., Jr. and Hedetniemi, Sandra M. and Hedetniemi, Stephen T.},
   title        = {Roman domination in graphs},
   journaltitle = {Discrete Mathematics},
   year         = {2004},
@@ -73,75 +91,64 @@
   doi          = {10.1016/j.disc.2003.06.004}
 }
 
-@article{PARRAINZA2024926,
-  author       = {Parra Inza, J. and others},
-  title        = {ILP formulations and heuristics for dominating set},
-  journaltitle = {Placeholder Journal},
-  date         = {2024}
+@article{ParraInza2024,
+  author       = {Parra Inza, Ernesto and Vakhania, Nodari and Sigarreta Almira, Jos{\'e} Mar{\'i}a and Hern{\'a}ndez-Aguilar, Jos{\'e} Alberto},
+  title        = {Approximating a Minimum Dominating Set by Purification},
+  journaltitle = {Algorithms},
+  year         = {2024},
+  volume       = {17},
+  number       = {6},
+  pages        = {258},
+  doi          = {10.3390/a17060258}
 }
 
 @article{barabasi1999emergence,
-  author       = {Barab{\'a}si, A.-L. and Albert, R.},
+  author       = {Barab\'{a}si, Albert-L\'aszl\'o and Albert, R\'eka},
   title        = {Emergence of scaling in random networks},
-  journaltitle = {Placeholder Journal},
-  date         = {1999}
+  journaltitle = {Science},
+  year         = {1999},
+  volume       = {286},
+  number       = {5439},
+  pages        = {509--512},
+  doi          = {10.1126/science.286.5439.509}
 }
 
 @article{ErdosRenyi1960,
-  author       = {Erd{\H{o}}s, P. and R{\'e}nyi, A.},
+  author       = {Erd\H{o}s, Paul and R\'enyi, Alfr\'ed},
   title        = {On the evolution of random graphs},
-  journaltitle = {Placeholder Journal},
-  date         = {1960}
+  journaltitle = {Publicationes Mathematicae},
+  year         = {1960},
+  volume       = {5},
+  pages        = {17--61}
 }
 
 @article{Watts1998,
-  author       = {Watts, D. J. and Strogatz, S. H.},
-  title        = {Collective dynamics of 'small-world' networks},
-  journaltitle = {Placeholder Journal},
-  date         = {1998}
-}
-
-@article{HolmeKim2002,
-  author       = {Holme, Petter and Kim, Beom Jun},
-  title        = {Growing Scale-Free Networks with Tunable Clustering},
-  journaltitle = {Physical Review E},
-  year         = {2002},
-  volume       = {65},
-  number       = {2},
-  pages        = {026107},
-  doi          = {10.1103/PhysRevE.65.026107}
-}
-
-@inproceedings{Leskovec2008Microscopic,
-  author       = {Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
-  title        = {Microscopic Evolution of Social Networks},
-  booktitle    = {Proceedings of the 14th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
-  year         = {2008},
-  pages        = {462--470},
-  doi          = {10.1145/1401890.1401948}
-}
-
-@inproceedings{Leskovec2005GraphsOverTime,
-  author       = {Leskovec, Jure and Kleinberg, Jon and Faloutsos, Christos},
-  title        = {Graphs over Time: Densification Laws, Shrinking Diameters and Possible Explanations},
-  booktitle    = {Proceedings of the 11th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
-  year         = {2005},
-  pages        = {177--187},
-  doi          = {10.1145/1081870.1081893}
+  author       = {Watts, Duncan J. and Strogatz, Steven H.},
+  title        = {Collective dynamics of small-world networks},
+  journaltitle = {Nature},
+  year         = {1998},
+  volume       = {393},
+  pages        = {440--442},
+  doi          = {10.1038/30918}
 }
 
 @article{CHAUDHARY2024301,
-  author       = {Chaudhary, P. and others},
-  title        = {Survey on domination and variants},
-  journaltitle = {Placeholder Journal},
-  date         = {2024}
+  author       = {Chaudhary, Juhi and Pradhan, Dinabandhu},
+  title        = {Roman 3-domination in graphs: Complexity and algorithms},
+  journaltitle = {Discrete Applied Mathematics},
+  year         = {2024},
+  volume       = {354},
+  pages        = {301--325},
+  doi          = {10.1016/j.dam.2022.09.017}
 }
 
-@article{Ghaffari2020,
-  author       = {Ghaffari, M.},
-  title        = {Distributed algorithms related to dominating set},
-  journaltitle = {Placeholder Journal},
-  date         = {2020}
+@article{Ghaffari2022,
+  author       = {Dory, Michal and Ghaffari, Mohsen and Ilchi, Saeed},
+  title        = {Near-Optimal Distributed Dominating Set in Bounded Arboricity Graphs},
+  journaltitle = {arXiv preprint arXiv:2206.05174},
+  year         = {2022},
+  doi          = {10.48550/arXiv.2206.05174},
+  note         = {Also appears in PODC 2022}
 }
 
 @book{henning2013roman,
@@ -150,82 +157,89 @@
   publisher    = {Springer},
   year         = {2013},
   series       = {Springer Monographs in Mathematics},
-  note         = {Zawiera rozdziały dot. wariantów rzymskich}
+  note         = {Includes chapters on Roman domination variants}
 }
 
-@article{booth1980dominating,
-  author       = {Booth, K. S. and Johnson, J. H.},
-  title        = {Dominating set problems},
-  journaltitle = {Placeholder Journal},
-  date         = {1980}
+@article{booth1982dominating,
+  author       = {Booth, Kellogg S. and Johnson, J. Howard},
+  title        = {Dominating sets in chordal graphs},
+  journaltitle = {SIAM Journal on Computing},
+  year         = {1982},
+  volume       = {11},
+  number       = {1},
+  pages        = {191--199},
+  doi          = {10.1137/0211015}
 }
 
 @book{garey1979,
-  author       = {Garey, M. R. and Johnson, D. S.},
+  author       = {Garey, Michael R. and Johnson, David S.},
   title        = {Computers and Intractability: A Guide to the Theory of NP-Completeness},
-  publisher    = {Placeholder Publisher},
-  date         = {1979}
+  publisher    = {W. H. Freeman},
+  year         = {1979}
 }
 
 @incollection{karp1972,
-  author       = {Karp, R. M.},
+  author       = {Karp, Richard M.},
   title        = {Reducibility Among Combinatorial Problems},
   booktitle    = {Complexity of Computer Computations},
-  publisher    = {Placeholder Publisher},
-  date         = {1972}
+  publisher    = {Plenum Press},
+  year         = {1972},
+  pages        = {85--103},
+  editor       = {Miller, Richard E. and Thatcher, James W.}
 }
 
 @article{Brandes2001,
   author       = {Brandes, Ulrik},
-  title        = {A Faster Algorithm for Betweenness Centrality},
+  title        = {A faster algorithm for betweenness centrality},
   journaltitle = {Journal of Mathematical Sociology},
   year         = {2001},
   volume       = {25},
-  number       = {2},
-  pages        = {163--177}
+  number       = {2--3},
+  pages        = {163--177},
+  doi          = {10.1080/0022250X.2001.9990249}
 }
 
 @inproceedings{McAuley2012,
-  author       = {McAuley, J. and Leskovec, J.},
+  author       = {McAuley, Julian and Leskovec, Jure},
   title        = {Learning to Discover Social Circles in Ego Networks},
-  booktitle    = {Placeholder Conference},
-  date         = {2012}
+  booktitle    = {Advances in Neural Information Processing Systems 25},
+  year         = {2012},
+  pages        = {548--556},
+  note         = {Proceedings of NeurIPS 2012},
+  url          = {https://papers.nips.cc/paper/4532-learning-to-discover-social-circles-in-ego-networks}
 }
 
 @article{NETTLETON20131,
-  author       = {Nettleton, D. F.},
-  title        = {Data analysis of social networks},
-  journaltitle = {Placeholder Journal},
-  date         = {2013}
+  author       = {Nettleton, David F.},
+  title        = {Data mining of social networks represented as graphs},
+  journaltitle = {Computer Science Review},
+  year         = {2013},
+  volume       = {7},
+  number       = {1},
+  pages        = {1--34},
+  doi          = {10.1016/j.cosrev.2012.12.001}
 }
 
-@article{Ugander2011,
-  author       = {Ugander, J. and others},
-  title        = {Anatomy of a Large Social Graph},
-  journaltitle = {Placeholder Journal},
-  date         = {2011}
-}
-
-@article{PANDA2023337,
-  author       = {Panda, S. and others},
-  title        = {Results on Roman or related domination},
-  journaltitle = {Placeholder Journal},
-  date         = {2023}
+@misc{Ugander2011,
+  author       = {Ugander, Johan and Karrer, Brian and Backstrom, Lars and Marlow, Cameron},
+  title        = {The Anatomy of the Facebook Social Graph},
+  howpublished = {arXiv preprint arXiv:1111.4503},
+  year         = {2011},
+  url          = {https://arxiv.org/abs/1111.4503}
 }
 
 @misc{wikiDominatingSet,
   title        = {Dominating set},
   howpublished = {Wikipedia},
   date         = {2024},
-  url          = {https://example.invalid/wiki/Dominating_set}
+  url          = {https://en.wikipedia.org/wiki/Dominating_set}
 }
 
-@misc{duolingo_family_blog,
-  title        = {Introducing the Duolingo Family Plan},
-  howpublished = {Duolingo Blog},
-  date         = {2020-08-12},
-  url          = {https://blog.duolingo.com/duolingo-family-plan/},
-  note         = {Dostęp 2025-09-15}
+@misc{duolingo_family,
+  title        = {Duolingo Family Plan},
+  howpublished = {Product page},
+  date         = {2024},
+  url          = {https://support.duolingo.com/hc/pl/articles/6159959913243-Plan-rodzinny-Super-Duolingo}
 }
 
 @misc{genai_usage,
@@ -293,187 +307,84 @@
   title        = {Subscription Economy Index},
   howpublished = {Industry report},
   date         = {2024},
-  url          = {https://example.invalid/subscription-economy-index}
+  url          = {https://www.zuora.com/resource/subscription-economy-index/}
 }
 
 @misc{subscriptionEconomyPrice2024,
   title        = {Subscription Price Trends 2024},
   howpublished = {Industry report},
   date         = {2024},
-  url          = {https://example.invalid/subscription-prices-2024}
+  url          = {https://recurly.com/press/recurly-releases-its-2024-state-of-subscriptions-report/}
 }
 
-% --- Added: RD variants and capacitated domination ---
-@incollection{fernau2006paramRD,
-  author       = {Fellows, Michael R. and Fernau, Henning and Prieto, Eduardo and Rosamond, Frances A.},
-  title        = {A Parameterized Perspective on Roman Domination},
-  booktitle    = {SOFSEM 2006: Theory and Practice of Computer Science},
-  publisher    = {Springer},
-  year         = {2006},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {3831},
-  pages        = {271--282},
-  doi          = {10.1007/11611257_22}
-}
-
-@article{fernau2008paramRD,
-  author       = {Fellows, Michael R. and Fernau, Henning and Prieto, Eduardo and Rosamond, Frances A.},
-  title        = {The parameterized complexity of Roman domination},
-  journaltitle = {Information Processing Letters},
-  year         = {2008},
-  volume       = {109},
-  number       = {1},
-  pages        = {68--70},
-  doi          = {10.1016/j.ipl.2008.08.011}
-}
-
-@article{roman2_survey_2024,
-  author       = {Koam, Stephane and Ouattara, Ismael and Yaro, Prosper},
-  title        = {A Survey on Roman\{2\}-Domination in Graphs},
-  journaltitle = {Mathematics},
-  year         = {2024},
-  volume       = {12},
-  number       = {8},
-  pages        = {1467},
-  doi          = {10.3390/math12081467}
-}
-
-@article{cap_dom_ars2010,
-  author       = {Goddard, Wayne and Hedetniemi, Stephen T. and Huff, Dave},
-  title        = {Capacitated domination},
-  journaltitle = {Ars Combinatoria},
-  year         = {2010},
-  volume       = {96},
-  pages        = {75--86}
-}
-
-@article{cap_dom_algo2011,
-  author       = {Kao, Mong-Jen and Chen, Han-Lin and Lee, D. T.},
-  title        = {Approximation Algorithms for the Capacitated Domination Problem},
-  journaltitle = {Algorithmica},
-  year         = {2011},
-  volume       = {61},
-  number       = {4},
-  pages        = {1009--1031},
-  doi          = {10.1007/s00453-010-9460-0}
-}
-
-@misc{cap_dom_planar_2016,
-  author       = {Chopra, Shubham and Dondeti, Raghav and Upadhyay, Akash and Vaish, Rishabh},
-  title        = {Capacitated Dominating Set on Planar Graphs},
-  howpublished = {arXiv preprint arXiv:1605.02219},
-  year         = {2016},
-  url          = {https://arxiv.org/abs/1605.02219}
-}
-
-% Spotify pricing (USA)
-@misc{spotify_us_pricing_2025,
-  title        = {Get started with Premium},
-  howpublished = {Spotify US Pricing Page},
-  date         = {2025-09-15},
-  url          = {https://www.spotify.com/us/premium/},
-  note         = {Cennik USA: Individual $11.99$, Duo $16.99$, Family $19.99$ za m-c; dostęp 2025-09-15}
-}
-
-% Spotify pricing (Poland, PLN)
-@misc{spotify_pl_premium_2025,
-  title        = {Zyskaj Premium},
-  howpublished = {Spotify Polska — strona Premium},
-  date         = {2025-09-15},
+@online{spotify_price2024,
+  title        = {Spotify Premium - Plany i ceny (Polska)},
+  author       = {{Spotify Polska}},
+  year         = {2025},
   url          = {https://www.spotify.com/pl/premium/},
-  note         = {Cennik w PLN: Individual 23{,}99, Duo 30{,}99, Family 37{,}99; dostęp 2025-09-15}
+  note         = {Stan na 09.2025: Individual - 23,99 PLN, Duo - 30,99 PLN, Family - 37,99 PLN miesięcznie.}
 }
 
-% Spotify Duo/Family address requirement (legal)
-@misc{spotify_duo_legal,
-  title        = {Spotify Premium Duo Terms and Conditions},
-  howpublished = {Spotify Legal},
-  date         = {2025-09-15},
-  url          = {https://www.spotify.com/us/legal/duo/},
-  note         = {Wymóg wspólnego adresu; dostęp 2025-09-15}
-}
-
-@misc{spotify_family_address_verification,
-  title        = {Plan Family a adres zamieszkania},
-  howpublished = {Centrum pomocy Spotify},
-  date         = {2025-09-15},
-  url          = {https://support.spotify.com/pl/article/family-address-verification/},
-  note         = {Weryfikacja adresu dla Family/Duo; dostęp 2025-09-15}
-}
-
-@misc{spotify_us_student_site,
-  title        = {Premium Student},
-  howpublished = {Spotify US — Student Plan},
-  date         = {2025-09-15},
-  url          = {https://www.spotify.com/us/student/},
-  note         = {Wymagana weryfikacja SheerID, plan jednoosobowy; dostęp 2025-09-15}
-}
-
-@misc{spotify_student_support,
-  title        = {Zniżka Studencka Spotify — kto może skorzystać},
-  howpublished = {Centrum pomocy Spotify},
-  date         = {2025-09-15},
-  url          = {https://support.spotify.com/pl/article/student-discount/},
-  note         = {Zasady, limity i weryfikacja; dostęp 2025-09-15}
-}
-@misc{ms365_family_up_to_6,
-  title        = {Share your Microsoft 365 Family subscription},
-  howpublished = {Microsoft Support},
+@misc{duolingo_app2024,
+  title        = {Super Duolingo - ceny w aplikacji mobilnej (Polska)},
+  author       = {{Duolingo}},
   year         = {2025},
-  url          = {https://support.microsoft.com/en/account-billing/share-your-microsoft-365-family-subscription-6d83e3fe-01f8-4895-a2e1-3ba9f7a5b14b},
-  note         = {Do 5 dodatkowych osób (łącznie 6); dostęp 2025-09-15}
+  howpublished = {Aplikacja mobilna Duolingo, wersja na Android},
+  note         = {Stan na 09.2025: Individual - 13,99 PLN, Family - 29,17 PLN miesięcznie.}
 }
 
-@article{ms365_price_increase_cnbc,
-  title   = {Microsoft raises Microsoft 365 prices as it adds AI assistant to more products},
-  author  = {Novet, Jordan},
-  journal = {CNBC},
-  year    = {2025},
-  month   = {January},
-  url     = {https://www.cnbc.com/2025/01/16/microsoft-raises-microsoft-365-prices-as-it-adds-ai-assistant.html},
-  note    = {Ceny USA po 2025-01-16; dostęp 2025-09-15}
+@misc{snapnets,
+  author       = {Stanford Network Analysis Project},
+  title        = {SNAP Datasets},
+  howpublished = {\url{https://snap.stanford.edu/data/}},
+  year         = {2024},
+  note         = {Dostęp: 2025-09}
 }
 
-@article{ms365_price_increase_theverge,
-  title   = {Microsoft 365 prices are going up as more AI features arrive},
-  author  = {Warren, Tom},
-  journal = {The Verge},
-  year    = {2025},
-  month   = {January},
-  url     = {https://www.theverge.com/2025/1/16/24297905/microsoft-365-price-increases-ai-features},
-  note    = {Ceny USA po 2025-01-16; dostęp 2025-09-15}
-}
-
-@misc{netflix_plans_2025,
-  title        = {Plans and Pricing},
-  howpublished = {Netflix Help Center},
+@online{spotify_price2025,
+  title        = {Spotify Premium — Plany i ceny (Polska)},
+  author       = {{Spotify Polska}},
   year         = {2025},
-  url          = {https://help.netflix.com/en/node/24926},
-  note         = {Standard: 2, Premium: 4; ceny USA (np. $17.99/$24.99). Dostęp 2025-09-15}
+  url          = {https://www.spotify.com/pl/premium/},
+  note         = {Stan na 09.2025: Basic -- 33,00 PLN, Standard -- 49,00 PLN, Premium -- 67,00 PLN miesięcznie.}
 }
 
-@misc{netflix_account_sharing,
-  title        = {Sharing your Netflix account},
-  howpublished = {Netflix Help Center},
+% Statistical testing references used in Chapter 6
+@article{demsar2006,
+  author       = {Dem{\v{s}}ar, Janez},
+  title        = {Statistical Comparisons of Classifiers over Multiple Data Sets},
+  journaltitle = {Journal of Machine Learning Research},
+  year         = {2006},
+  volume       = {7},
+  pages        = {1--30},
+  url          = {https://jmlr.org/papers/v7/demsar06a.html}
+}
+
+@article{friedman1937,
+  author       = {Friedman, Milton},
+  title        = {The Use of Ranks to Avoid the Assumption of Normality Implicit in the Analysis of Variance},
+  journaltitle = {Journal of the American Statistical Association},
+  year         = {1937},
+  volume       = {32},
+  number       = {200},
+  pages        = {675--701},
+  doi          = {10.1080/01621459.1937.10503522}
+}
+
+@phdthesis{nemenyi1963,
+  author       = {Nemenyi, Peter B.},
+  title        = {Distribution-free Multiple Comparisons},
+  school       = {Princeton University},
+  year         = {1963},
+  url          = {https://apps.dtic.mil/sti/pdfs/AD0634082.pdf},
+  note         = {DTIC Accession Number AD0634082}
+}
+
+% Netflix pricing/help reference for Polish plans page
+@online{netflix_plans,
+  title        = {Plany i ich ceny},
+  author       = {{Netflix Help Center}},
   year         = {2025},
-  url          = {https://help.netflix.com/en/node/122377},
-  note         = {Zasady household; dostęp 2025-09-15}
-}
-
-@article{youtube_premium_price2024,
-  title   = {YouTube Premium price hike: here's how much it costs now},
-  author  = {Husband, Tom},
-  journal = {TechRadar},
-  year    = {2024},
-  month   = {July},
-  url     = {https://www.techradar.com/streaming-services/youtube-premium-price-hike},
-  note    = {US: Individual $13.99$, Family $22.99$; dostęp 2025-09-15}
-}
-
-@misc{google_family_groups,
-  title        = {Google Families — Family groups},
-  howpublished = {Google},
-  year         = {2025},
-  url          = {https://families.google.com/families/},
-  note         = {Grupa rodzinna do 6 osób; dostęp 2025-09-15}
+  url          = {https://help.netflix.com/pl/node/24926},
+  note         = {Cennik i zasady planów w Polsce; stan na 09.2025}
 }
