Implement structural updates and optimizations across multiple modules

--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -51,22 +51,22 @@
 }
 
 @book{haynes1998domination,
-  author       = {Haynes, Teresa W. and Hedetniemi, Stephen T. and Slater, Peter J.},
-  title        = {Fundamentals of Domination in Graphs},
-  publisher    = {Marcel Dekker},
-  year         = {1998}
+  author    = {Haynes, Teresa W. and Hedetniemi, Stephen T. and Slater, Peter J.},
+  title     = {Fundamentals of Domination in Graphs},
+  publisher = {Marcel Dekker},
+  year      = {1998}
 }
 
 @inproceedings{BermanFujitoThreeDegree,
-  author       = {Berman, Piotr and Fujito, Toshihiro},
-  title        = {On the Approximation Properties of the Independent Set Problem in Degree 3 Graphs},
-  booktitle    = {Algorithms and Data Structures},
-  series       = {Lecture Notes in Computer Science},
-  volume       = {955},
-  publisher    = {Springer},
-  year         = {1995},
-  pages        = {449--460},
-  isbn         = {978-3-540-60165-6}
+  author    = {Berman, Piotr and Fujito, Toshihiro},
+  title     = {On the Approximation Properties of the Independent Set Problem in Degree 3 Graphs},
+  booktitle = {Algorithms and Data Structures},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {955},
+  publisher = {Springer},
+  year      = {1995},
+  pages     = {449--460},
+  isbn      = {978-3-540-60165-6}
 }
 
 @article{Favaron2009,
@@ -142,6 +142,17 @@
   doi          = {10.1016/j.dam.2022.09.017}
 }
 
+@article{Ghaffari2020,
+  author       = {Ghaffari-Hadigheh, Alireza},
+  title        = {Roman domination problem with uncertain positioning and deployment costs},
+  journaltitle = {Soft Computing},
+  year         = {2019},
+  volume       = {24},
+  number       = {4},
+  pages        = {2637--2645},
+  doi          = {10.1007/s00500-019-03811-z}
+}
+
 @article{Ghaffari2022,
   author       = {Dory, Michal and Ghaffari, Mohsen and Ilchi, Saeed},
   title        = {Near-Optimal Distributed Dominating Set in Bounded Arboricity Graphs},
@@ -152,12 +163,12 @@
 }
 
 @book{henning2013roman,
-  author       = {Henning, Michael A. and Yeo, Anders},
-  title        = {Total Domination in Graphs},
-  publisher    = {Springer},
-  year         = {2013},
-  series       = {Springer Monographs in Mathematics},
-  note         = {Includes chapters on Roman domination variants}
+  author    = {Henning, Michael A. and Yeo, Anders},
+  title     = {Total Domination in Graphs},
+  publisher = {Springer},
+  year      = {2013},
+  series    = {Springer Monographs in Mathematics},
+  note      = {Includes chapters on Roman domination variants}
 }
 
 @article{booth1982dominating,
@@ -171,21 +182,43 @@
   doi          = {10.1137/0211015}
 }
 
+
+@article{PANDA2023337,
+  author       = {Panda, B. S. and Rana, Soumyashree and Mishra, Sounaka},
+  title        = {On the complexity of co-secure dominating set problem},
+  journaltitle = {Information Processing Letters},
+  year         = {2024},
+  volume       = {185},
+  pages        = {106463},
+  doi          = {10.1016/j.ipl.2023.106463}
+}
+
+@article{PARRAINZA2024926,
+  author       = {Parra Inza, Ernesto and Vakhania, Nodari and Sigarreta Almira, Jose Maria and Hernandez-Aguilar, Jose Alberto},
+  title        = {Approximating a Minimum Dominating Set by Purification},
+  journaltitle = {Algorithms},
+  year         = {2024},
+  volume       = {17},
+  number       = {6},
+  pages        = {258},
+  doi          = {10.3390/a17060258}
+}
+
 @book{garey1979,
-  author       = {Garey, Michael R. and Johnson, David S.},
-  title        = {Computers and Intractability: A Guide to the Theory of NP-Completeness},
-  publisher    = {W. H. Freeman},
-  year         = {1979}
+  author    = {Garey, Michael R. and Johnson, David S.},
+  title     = {Computers and Intractability: A Guide to the Theory of NP-Completeness},
+  publisher = {W. H. Freeman},
+  year      = {1979}
 }
 
 @incollection{karp1972,
-  author       = {Karp, Richard M.},
-  title        = {Reducibility Among Combinatorial Problems},
-  booktitle    = {Complexity of Computer Computations},
-  publisher    = {Plenum Press},
-  year         = {1972},
-  pages        = {85--103},
-  editor       = {Miller, Richard E. and Thatcher, James W.}
+  author    = {Karp, Richard M.},
+  title     = {Reducibility Among Combinatorial Problems},
+  booktitle = {Complexity of Computer Computations},
+  publisher = {Plenum Press},
+  year      = {1972},
+  pages     = {85--103},
+  editor    = {Miller, Richard E. and Thatcher, James W.}
 }
 
 @article{Brandes2001,
@@ -199,14 +232,24 @@
   doi          = {10.1080/0022250X.2001.9990249}
 }
 
+@book{Brandes2004,
+  editor    = {Brandes, Ulrik and Erlebach, Thomas},
+  title     = {Network Analysis: Methodological Foundations},
+  publisher = {Springer},
+  year      = {2005},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {3418},
+  doi       = {10.1007/978-3-540-31955-9}
+}
+
 @inproceedings{McAuley2012,
-  author       = {McAuley, Julian and Leskovec, Jure},
-  title        = {Learning to Discover Social Circles in Ego Networks},
-  booktitle    = {Advances in Neural Information Processing Systems 25},
-  year         = {2012},
-  pages        = {548--556},
-  note         = {Proceedings of NeurIPS 2012},
-  url          = {https://papers.nips.cc/paper/4532-learning-to-discover-social-circles-in-ego-networks}
+  author    = {McAuley, Julian and Leskovec, Jure},
+  title     = {Learning to Discover Social Circles in Ego Networks},
+  booktitle = {Advances in Neural Information Processing Systems 25},
+  year      = {2012},
+  pages     = {548--556},
+  note      = {Proceedings of NeurIPS 2012},
+  url       = {https://papers.nips.cc/paper/4532-learning-to-discover-social-circles-in-ego-networks}
 }
 
 @article{NETTLETON20131,
@@ -272,17 +315,17 @@
 }
 
 @book{holland1975,
-  author       = {Holland, J. H.},
-  title        = {Adaptation in Natural and Artificial Systems},
-  publisher    = {University of Michigan Press},
-  year         = {1975}
+  author    = {Holland, J. H.},
+  title     = {Adaptation in Natural and Artificial Systems},
+  publisher = {University of Michigan Press},
+  year      = {1975}
 }
 
 @book{goldberg1989,
-  author       = {Goldberg, D. E.},
-  title        = {Genetic Algorithms in Search, Optimization, and Machine Learning},
-  publisher    = {Addison-Wesley},
-  year         = {1989}
+  author    = {Goldberg, D. E.},
+  title     = {Genetic Algorithms in Search, Optimization, and Machine Learning},
+  publisher = {Addison-Wesley},
+  year      = {1989}
 }
 
 @article{dorigo1997,
@@ -297,10 +340,10 @@
 }
 
 @book{wolsey1998,
-  author       = {Wolsey, L. A.},
-  title        = {Integer Programming},
-  publisher    = {Wiley},
-  year         = {1998}
+  author    = {Wolsey, L. A.},
+  title     = {Integer Programming},
+  publisher = {Wiley},
+  year      = {1998}
 }
 
 @misc{subscriptionEconomyIndex,
@@ -318,11 +361,11 @@
 }
 
 @online{spotify_price2024,
-  title        = {Spotify Premium - Plany i ceny (Polska)},
-  author       = {{Spotify Polska}},
-  year         = {2025},
-  url          = {https://www.spotify.com/pl/premium/},
-  note         = {Stan na 09.2025: Individual - 23,99 PLN, Duo - 30,99 PLN, Family - 37,99 PLN miesięcznie.}
+  title  = {Spotify Premium - Plany i ceny (Polska)},
+  author = {{Spotify Polska}},
+  year   = {2025},
+  url    = {https://www.spotify.com/pl/premium/},
+  note   = {Stan na 09.2025: Individual - 23,99 PLN, Duo - 30,99 PLN, Family - 37,99 PLN miesięcznie.}
 }
 
 @misc{duolingo_app2024,
@@ -342,11 +385,11 @@
 }
 
 @online{spotify_price2025,
-  title        = {Spotify Premium — Plany i ceny (Polska)},
-  author       = {{Spotify Polska}},
-  year         = {2025},
-  url          = {https://www.spotify.com/pl/premium/},
-  note         = {Stan na 09.2025: Basic -- 33,00 PLN, Standard -- 49,00 PLN, Premium -- 67,00 PLN miesięcznie.}
+  title  = {Spotify Premium — Plany i ceny (Polska)},
+  author = {{Spotify Polska}},
+  year   = {2025},
+  url    = {https://www.spotify.com/pl/premium/},
+  note   = {Stan na 09.2025: Basic -- 33,00 PLN, Standard -- 49,00 PLN, Premium -- 67,00 PLN miesięcznie.}
 }
 
 % Statistical testing references used in Chapter 6
@@ -372,19 +415,19 @@
 }
 
 @phdthesis{nemenyi1963,
-  author       = {Nemenyi, Peter B.},
-  title        = {Distribution-free Multiple Comparisons},
-  school       = {Princeton University},
-  year         = {1963},
-  url          = {https://apps.dtic.mil/sti/pdfs/AD0634082.pdf},
-  note         = {DTIC Accession Number AD0634082}
+  author = {Nemenyi, Peter B.},
+  title  = {Distribution-free Multiple Comparisons},
+  school = {Princeton University},
+  year   = {1963},
+  url    = {https://apps.dtic.mil/sti/pdfs/AD0634082.pdf},
+  note   = {DTIC Accession Number AD0634082}
 }
 
 % Netflix pricing/help reference for Polish plans page
 @online{netflix_plans,
-  title        = {Plany i ich ceny},
-  author       = {{Netflix Help Center}},
-  year         = {2025},
-  url          = {https://help.netflix.com/pl/node/24926},
-  note         = {Cennik i zasady planów w Polsce; stan na 09.2025}
+  title  = {Plany i ich ceny},
+  author = {{Netflix Help Center}},
+  year   = {2025},
+  url    = {https://help.netflix.com/pl/node/24926},
+  note   = {Cennik i zasady planów w Polsce; stan na 09.2025}
 }
