--- a/docs/thesis/preamble.tex
+++ b/docs/thesis/preamble.tex
@@ -92,6 +92,7 @@
 \usepackage{float}
 
 \usepackage{booktabs}
+\usepackage{multirow}
 
 % Micro-typographic enhancements and proper localized quotes
 \usepackage{microtype}
