--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -305,7 +305,7 @@
 
 @article{glover1989,
   author       = {Glover, F.},
-  title        = {Tabu Search—Part I},
+  title        = {Tabu Search--Part I},
   journaltitle = {ORSA Journal on Computing},
   year         = {1989},
   volume       = {1},
@@ -385,7 +385,7 @@
 }
 
 @online{spotify_price2025,
-  title  = {Spotify Premium — Plany i ceny (Polska)},
+  title  = {Spotify Premium -- Plany i ceny (Polska)},
   author = {{Spotify Polska}},
   year   = {2025},
   url    = {https://www.spotify.com/pl/premium/},
