--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -431,3 +431,10 @@
   url    = {https://help.netflix.com/pl/node/24926},
   note   = {Cennik i zasady planów w Polsce; stan na 09.2025}
 }
+
+@misc{mathworldDominatingSet,
+  title        = {Dominating Set -- Wolfram MathWorld},
+  howpublished = {\url{https://mathworld.wolfram.com/DominatingSet.html}},
+  note         = {Definicje: minimal dominating set, domination number},
+  year         = {2025}
+}
