--- a/docs/thesis/preamble.tex
+++ b/docs/thesis/preamble.tex
@@ -100,6 +100,8 @@
 \usepackage{multirow}
 \usepackage{etoolbox}
 
+\usepackage{stmaryrd}
+
 % Force 9pt text inside every tabular so all tables use the mandated size
 \AtBeginEnvironment{tabular}{\fontsize{9pt}{11pt}\selectfont}
 
