--- a/docs/thesis/frontmatter/list_of_symbols.tex
+++ b/docs/thesis/frontmatter/list_of_symbols.tex
@@ -6,14 +6,14 @@
 \begin{tabular}{@{} l l p{0.72\textwidth} @{}}
     $G=(V,E)$    & -- & graf relacji społecznych. \\
     $V,E$        & -- & zbiory wierzchołków i krawędzi. \\
-    $N(v),\ N[v]$ & -- & otoczenie wierzchołka $v$ oraz otoczenie domknięte. \\
+    $N(v),\ N[v]$ & -- & sąsiedztwo wierzchołka $v$ oraz sąsiedztwo domknięte. \\
     $\deg(v)$    & -- & stopień wierzchołka $v$. \\
     $n=|V|,\ m=|E|$ & -- & liczba wierzchołków i krawędzi. \\
     $\Delta$     & -- & maksymalny stopień grafu. \\
     $f:V\to\{0,1,2\}$ & -- & etykietowanie ról (0-odbiorca, 1-indywidualna, 2-grupowa). \\
     $\cost(f)$   & -- & koszt rozwiązania (def. w rozdz.\,\ref{sec:model-formal}). \\
     $\mathcal{L}$ & -- & rodzina typów licencji $\ell_t=(c_t,\,\ell^{\min}_t,\,\ell^{\max}_t)$, w skrócie $(c_t,\,l_t,\,u_t)$. \\
-    $I,G,R$      & -- & zbiory: licencji indywidualnych, grupowych i odbiorców. \\
+    $I,H,R$      & -- & zbiory: licencji indywidualnych, grupowych i odbiorców. \\
     $p$          & -- & względny koszt licencji grupowej $p=c_g/c_1$. \\
 \end{tabular}
 
