Add work division chapter and update thesis structure
- Introduced a new chapter "Podział pracy" detailing the division of work between team members in the implementation and theoretical parts of the thesis.
- Updated main.tex to include the new chapter in the frontmatter.
- Modified appendix inclusion to use input instead of include for consistency.
- Added multiple graph images and CSV files from various runs, documenting the performance of different algorithms on various graph types.
- Adjusted parameters in custom.py for testing with different graph configurations and license settings.
- Enhanced graph visualization settings in graph_visualizer.py for better clarity and presentation.

--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -17,6 +17,8 @@
 
 \input{frontmatter/list_of_symbols}
 
+\input{frontmatter/work_division}
+
 \input{chapters/01_introduction}
 \input{chapters/02_graph_model}
 \input{chapters/03_roman_domination}
@@ -29,7 +31,7 @@
 
 \printbibliography
 
-% \appendix
-% \include{chapters/99_appendix}
+\appendix
+\input{chapters/99_appendix}
 
 \end{document}
