feat: przegląd istniejących rozwiązań

--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -438,3 +438,24 @@
   note         = {Definicje: minimal dominating set, domination number},
   year         = {2025}
 }
+
+@article{Roman2DominationSurvey,
+  author  = {D. Sharma and N. R. Aravind and S. A. Choudum},
+  title   = {Survey on Roman \{2\}-Domination},
+  journal = {Mathematics},
+  volume  = {12},
+  number  = {17},
+  pages   = {2771},
+  year    = {2024},
+  publisher = {MDPI},
+  doi     = {10.3390/math12172771}
+}
+
+@inproceedings{CapDom,
+  author    = {Daniel Lokshtanov and Dániel Marx and Saket Saurabh},
+  title     = {Known Algorithms on Capacitated Domination},
+  booktitle = {Proceedings of IWPEC},
+  year      = {2011},
+  pages     = {351--362},
+  url       = {https://sites.cs.ucsb.edu/~daniello/papers/capdomset.pdf}
+}
