Add benchmark CSV files for various configurations and algorithms
- Created new benchmark CSV files for multiple runs with the ILPSolver algorithm.
- Included data for different graph types (scale_free, facebook_ego) and configurations.
- Each CSV file contains metrics such as node and edge counts, density, average degree, clustering coefficients, total cost, and execution time.
- Added details on license configurations and algorithm parameters for better traceability.

--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -490,6 +490,14 @@
   year    = {1998}
 }
 
+@book{stanley1997enumerative,
+  title     = {Enumerative Combinatorics, Volume 1},
+  author    = {Richard P. Stanley},
+  year      = {1997},
+  publisher = {Cambridge University Press},
+  pages     = {74--78},
+  isbn      = {9780521789875}
+}
 
 @article{pluta2006topologia,
   author  = {Roman Pluta},
